# vapi

./: Makefile  Makefile.am  Makefile.in  config.cache  config.status  configure  configure.in  configure.scan  gpio.c  uart  uart.c  uart.cfg  vapi.c  vapi.h
.deps/: uart.P  vapi.P
