dnl Process this file with autoconf to produce a configure script.
AC_INIT(vapi.c)
AM_INIT_AUTOMAKE(vapi, 1.1)

dnl Checks for programs.
AC_PROG_CC
AC_MINIX
AC_PROG_MAKE_SET
AC_PROG_GCC_TRADITIONAL
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_CHECK_FUNCS(socket strerror strtol)

AC_OUTPUT(Makefile)
